--- a/centos7php56/Dockerfile
+++ b/centos7php56/Dockerfile
@@ -1,3 +1,4 @@
-FROM centos:7
+FROM dqneo/php:centos7remi
 
-RUN yum -y install --enablerepo=remi-php56 php
+RUN yum -y install --enablerepo=remi-php56 php; yum clean all;
+
