--- a/centos7php7/Dockerfile
+++ b/centos7php7/Dockerfile
@@ -2,17 +2,15 @@ FROM centos:centos7
 
 MAINTAINER DQNEO
 
-WORKDIR /tmp
-
 RUN yum -y update; yum clean all
-RUN yum -y install wget
 
-RUN yum -y install tar
+# install packages to build php itslef
+RUN yum -y install wget tar make gcc autoconf bison re2c; yum clean all
 
-RUN yum -y install make gcc; yum clean all
-RUN yum -y install autoconf; yum clean all
-RUN yum -y install bison re2c; yum clean all
+# install packages to build php extensions
 RUN yum -y install libxml2-devel; yum clean all
+
+WORKDIR /tmp
 
 RUN wget https://github.com/php/php-src/archive/POST_PHP7_EREG_MYSQL_REMOVALS.tar.gz  -O php7.tar.gz
 RUN tar xfz php7.tar.gz
