--- a/centos7remiphp56/Dockerfile
+++ b/centos7remiphp56/Dockerfile
@@ -2,3 +2,5 @@ FROM dqneo/php:centos7remi
 
 # install php self
 RUN yum -y install --enablerepo=remi-php56 php php-mbstring; yum clean all;
+
+CMD ["php", "-v"]
