--- a/7.0/Dockerfile
+++ b/7.0/Dockerfile
@@ -12,7 +12,7 @@ RUN yum -y install libxml2-devel libcurl-devel libmcrypt-devel openssl-devel lib
 WORKDIR /usr/local/src
 ENV PHP_VER 7.0.0alpha1
 
-RUN curl --silent --location https://github.com/php/php-src/archive/php-7.0.0alpha1.tar.gz -o php-${PHP_VER}.tar.gz \
+RUN curl --silent --location https://github.com/php/php-src/archive/php-${PHP_VER}.tar.gz -o php-${PHP_VER}.tar.gz \
     && tar xfz php-${PHP_VER}.tar.gz \
     && rm php-${PHP_VER}.tar.gz
 
