--- a/cheese/5.6/Dockerfile
+++ b/cheese/5.6/Dockerfile
@@ -1,6 +1,7 @@
 FROM dqneo/phpbuild:5.6
 
 RUN cp php.ini-development /opt/php/lib/php.ini
+RUN echo "date.timezone=Asia/Tokyo" >> /opt/php/lib/php.ini
 
 RUN yum -y install ImageMagick ImageMagick-devel
 
