--- a/cheese/5.6/Dockerfile
+++ b/cheese/5.6/Dockerfile
@@ -3,10 +3,9 @@ FROM dqneo/phpbuild:5.6
 RUN cp php.ini-development /opt/php/lib/php.ini
 RUN echo "date.timezone=Asia/Tokyo" >> /opt/php/lib/php.ini
 
+# pecl imagick
 RUN yum -y install ImageMagick ImageMagick-devel
-
 RUN pecl install imagick
-
 RUN echo "extension=imagick.so" >> /opt/php/lib/php.ini
 
 
