--- a/cheese/5.6/Dockerfile
+++ b/cheese/5.6/Dockerfile
@@ -12,3 +12,8 @@ RUN echo "extension=imagick.so" >> /opt/php/lib/php.ini
 RUN pecl install memcache
 RUN echo "extension=memcache.so" >> /opt/php/lib/php.ini
 
+# pecl memcached
+RUN yum -y install libmemcached-devel
+RUN pecl install memcached
+RUN echo "extension=memcached.so" >> /opt/php/lib/php.ini
+
