--- a/cheese/5.6/Dockerfile
+++ b/cheese/5.6/Dockerfile
@@ -17,3 +17,5 @@ RUN yum -y install libmemcached-devel
 RUN pecl install memcached
 RUN echo "extension=memcached.so" >> /opt/php/lib/php.ini
 
+RUN yum -y install nano
+
