--- a/cheese/7.0/Dockerfile
+++ b/cheese/7.0/Dockerfile
@@ -13,9 +13,9 @@ RUN pecl install memcache
 RUN echo "extension=memcache.so" >> /opt/php/lib/php.ini
 
 # pecl memcached
-RUN yum -y install libmemcached-devel
-RUN pecl install memcached
-RUN echo "extension=memcached.so" >> /opt/php/lib/php.ini
+#RUN yum -y install libmemcached-devel
+#RUN pecl install memcached
+#RUN echo "extension=memcached.so" >> /opt/php/lib/php.ini
 
 RUN yum -y install nano
 
