--- a/centos7remiphp56extensions/Dockerfile
+++ b/centos7remiphp56extensions/Dockerfile
@@ -1,4 +1,7 @@
-FROM dqneo/php:centos7remiphp56
+FROM dqneo/php:centos7remi
+
+# install php self
+RUN yum -y install --enablerepo=remi-php56 php php-mbstring; yum clean all;
 
 # basical extensions
 RUN yum -y install --enablerepo=remi-php56 \
@@ -28,3 +31,5 @@ RUN yum -y install --enablerepo=remi-php56 \
 
 # gd
 #RUN yum -y install --enablerepo=remi-php56 php-gd
+
+CMD ["php", "-v"]
