--- a/centos7remiphp56extensions/Dockerfile
+++ b/centos7remiphp56extensions/Dockerfile
@@ -1,4 +1,8 @@
-FROM dqneo/php:centos7remi
+FROM dqneo/base:centos7
+
+MAINTAINER DQNEO
+
+RUN rpm -ivh http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
 
 # install php self
 RUN yum -y install --enablerepo=remi-php56 php php-mbstring; yum clean all;
