--- a/centos7/remi/Dockerfile
+++ b/centos7/remi/Dockerfile
@@ -2,6 +2,9 @@ FROM centos:7
 
 MAINTAINER DQNEO
 
+RUN yum -y update; yum clean all;
+RUN yum -y install epel-release; yum clean all
+
 RUN rpm -ivh http://rpms.famillecollet.com/enterprise/remi-release-7.rpm
 
 # install php self
